# image-lib

./: .gitignore  CMakeLists.txt  CMakeLists_PURECPP.txt  CMakePresets.json  OLDCMAKE.txt  README.md
examples/: grayscale_example.cpp  grayscale_example_single.cpp  grayscale_example_single_cu.cu
include/image_library/: image.hpp  processing.hpp  processing_cu.h
src/: image.cpp  image_ORIG.fake  processing.cpp  processing_cu.cu
tests/: CMakeLists.txt  image_test.cpp  processing_test.cpp
